--- a/QuestionApp/templates/QuestionApp/base.html
+++ b/QuestionApp/templates/QuestionApp/base.html
@@ -1,13 +1,24 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <title>my investigation questionnaire</title>
+        <link href="{% static 'QuestionApp/css/style.css' %}" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <h1>
-            {% block header%}
-            {% endblock%}
-        </h1>
+        <header>
+            <div>
+                {% block logo %}
+                {% endblock %}
+            </div>
+            <div class="nav-left">
+                {% block header_content %}
+                {% endblock %}
+            </div>
+            <div class="nav-right">
+                <a href="{% url 'home' %}">home</a>
+            </div>
+        </header>
         <article>
             {% block content %}
             {% endblock %}
