--- a/QuestionApp/templates/QuestionApp/home.html
+++ b/QuestionApp/templates/QuestionApp/home.html
@@ -1,7 +1,14 @@
 {% extends 'QuestionApp/base.html' %}
+{% load static %}
 
-{% block header%}
-    my investigation questionnaire 3
+{% block logo %}
+    <img class="img1" src="{% static 'QuestionApp/img/1.jpg' %}">
+{% endblock %}
+
+{% block header_content%}
+    <h1>
+        my investigation questionnaire 3
+    </h1>
 {% endblock%}
 
 {% block content %}
